--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Database locale da ignorare
+# File binari da ignorare
 data/db/wordageddonDB.db
+data/analysis/analysis.dat
 
 # Directory di build
 target/
